syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "Backend/pb";

message ChatRecord{
    int32 TargetID = 1;
    string RoleType = 2;
    string MediaType = 3;
    bytes Media = 4;
    bool IsRead = 5;
    google.protobuf.Timestamp CreatedAt = 6;
}
