syntax = "proto3";

package pb;

import "chatRecord.proto";
import "chatRecordNoID.proto";
import "google/protobuf/timestamp.proto";


option go_package = "Backend/pb";

// Create Chat Table
message CreateChatTableRequest {
    int32 UserID = 1;
}

// Create
message CreateChatRecordRequest {
    int32 UserID = 1;
    int32 TargetID = 2;
    string RoleType = 3;
    string MediaType = 4;
    bytes Media = 6;
}

message CreateChatRecordResponse {
    ChatRecord ChatRecord = 1;
}

// GetRecord
message GetChatRecordRequest {
    int32 UserID = 1;
    int32 TargetID = 2;
}

message GetChatRecordResponse {
    repeated ChatRecordNoID ChatRecordNoID = 1;
}

// GetTargetID
message GetTargetIDRequest {
    int32 UserID = 1;
}

message GetTargetIDResponse {
    repeated int32 TargetID = 1;
}

// GetLastMsg
message GetLastMsgRequest{
    int32 UserID = 1;
    int32 TargetID = 2;
}

message GetLastMsgResponse{
    string MediaType = 1;
    bytes Media = 2;
    bool IsRead = 3;
}

message GetChatRowRequest{
    int32 UserID = 1;
}
message GetChatRowResponse{
    int32 Row = 1;
}

// Update
message UpdateChatRecordRequest {
    int32 UserID = 1;
    int32 TargetID = 2;
    string RoleType = 3;
    string MediaType = 4;
    bytes Media = 5;
    google.protobuf.Timestamp CreateAt = 6;
}

message UpdateChatRecordResponse {
    ChatRecord ChatRecord = 1;
}

message UpdateReadRequest {
    int32 UserID = 1;
    int32 TargetID = 2;
}


// Delete
message DeleteChatTableRequest {
    int32 UserID = 1;
}

